Fixed a bug where the preview thumbnail for an image that has a larger height than width was squashed into a square
In the CP, the preview thumbnail for an image that has a larger height than width is squashed into a square.

--- a/src/resources/css/source/craft.scss
+++ b/src/resources/css/source/craft.scss
@@ -636,7 +636,6 @@ $elementThumbPadding: 30 + $elementInnerSpacing;
 		max-width: 100%;
 		max-height: 100%;
 		background: url(../images/checkers.svg) 0 0;
-        @include flex-grow(1);
 	}
 
 	.label {
@@ -661,6 +660,7 @@ $elementThumbPadding: 30 + $elementInnerSpacing;
 			.elementthumb {
 				@include display-flex;
 				@include align-items(center);
+			  	@include justify-content(center);
 				position: absolute;
 				top: calc(50% - 15px);
 				width: 30px;
